// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-17300.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
> [NOTE]
> [Link](https://example.com) after link reference.
>
> [IMPORTANT]
> **Strong emphasis** after link reference.

> [CRITICAL]
> _emphasis_ oafter link reference

> **Strong emphasis**
> _emphasis_

[NOTE]: /note
[IMPORTANT]: /important
[CRITICAL]: /critical

=====================================output=====================================
> [NOTE]
> [Link](https://example.com) after link reference.
>
> [IMPORTANT]
> **Strong emphasis** after link reference.

> [CRITICAL]
> _emphasis_ oafter link reference

> **Strong emphasis**
> _emphasis_

[NOTE]: /note
[IMPORTANT]: /important
[CRITICAL]: /critical

================================================================================
`;

exports[`nested-fences.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`\`\`\`\`\`\`\`\`\`\`markdown
\`\`\`\`\`\`\`\`\`\`\`\`
Ultra outer
\`\`\`\`\`\`\`\`\`
Super outer
\`\`\`\`\`\`
Outer
\`\`\`
Inner
\`\`\`
\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`\`\`\`

\`\`\`\`\`\`\`\`\`
Super outer
\`\`\`\`\`\`
Outer
\`\`\`
Inner
\`\`\`
\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`

\`\`\`\`\`\`
Outer
\`\`\`
Inner
\`\`\`
\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`\`\`\`\`

=====================================output=====================================
\`\`\`\`\`\`\`\`\`\`\`\`\`markdown
\`\`\`\`\`\`\`\`\`\`\`\`
Ultra outer
\`\`\`\`\`\`\`\`\`
Super outer
\`\`\`\`\`\`
Outer
\`\`\`
Inner
\`\`\`
\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`\`\`\`

\`\`\`\`\`\`\`\`\`
Super outer
\`\`\`\`\`\`
Outer
\`\`\`
Inner
\`\`\`
\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`

\`\`\`\`\`\`
Outer
\`\`\`
Inner
\`\`\`
\`\`\`\`\`\`
\`\`\`\`\`\`\`\`\`\`\`\`\`

================================================================================
`;

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`
a
=====================================output=====================================
\`\`\`
a
\`\`\`

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`
a

=====================================output=====================================
\`\`\`
a
\`\`\`

================================================================================
`;

exports[`snippet: #2 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`
a


=====================================output=====================================
\`\`\`
a

\`\`\`

================================================================================
`;

exports[`snippet: #3 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`
a










=====================================output=====================================
\`\`\`
a









\`\`\`

================================================================================
`;
